--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>
-        Hello,this is new branch.
+        Hello,this is new.
     </h1>
     <script src="app.js"></script>
 </body>
